--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,7 +33,7 @@
                 app:toolbarId="@+id/tool_bar"
                 app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
-                <TextView
+                <com.chaozhuo.parentmanager.weight.AlignTextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center"
