--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#FFD323 </color>
+    <color name="colorPrimaryDark">#FFD323 </color>
+    <color name="colorAccent">#FFD323 </color>
+    <color name="tvWhite">#FFFFFF</color>
+
+    <color name="bottom_select">#333333</color>
+    <color name="bottom_normal">#BBBBBB</color>
 </resources>
