--- a/app/src/main/res/layout/fragment_statistics.xml
+++ b/app/src/main/res/layout/fragment_statistics.xml
@@ -10,12 +10,12 @@
         android:id="@+id/statistics_tab"
         android:layout_width="match_parent"
         android:layout_height="42dp"
-        android:background="@color/colorPrimary"
+        android:background="#FFFCD229"
         app:tabIndicatorHeight="0dp"
         app:tabPaddingBottom="4dp"
         app:tabPaddingTop="4dp"
-        app:tabSelectedTextColor="@color/colorAccent"
-        app:tabTextColor="@android:color/white">
+        app:tabSelectedTextColor="@color/tvWhite"
+        app:tabTextColor="@android:color/holo_green_dark">
 
     </android.support.design.widget.TabLayout>
 
