--- a/app/src/main/res/layout/fragment_manager.xml
+++ b/app/src/main/res/layout/fragment_manager.xml
@@ -5,10 +5,10 @@
     tools:context="com.chaozhuo.parentmanager.fragment.StatisticsFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_marginTop="100dp"
-        android:layout_width="match_parent"
+    <com.chaozhuo.parentmanager.weight.CircleImageView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:src="@drawable/child"
         android:text="manger" />
 
 </FrameLayout>
