--- a/app/src/main/res/layout/fragment_manager.xml
+++ b/app/src/main/res/layout/fragment_manager.xml
@@ -1,14 +1,23 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.chaozhuo.parentmanager.fragment.StatisticsFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <com.chaozhuo.parentmanager.weight.CircleImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/child"
+        android:src="@drawable/mali"
+        android:text="manger"
+        app:type="round" />
+
+    <com.chaozhuo.parentmanager.weight.CircleImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/mali"
         android:text="manger" />
 
-</FrameLayout>
+</LinearLayout>
