--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,5 +8,12 @@
         <item name="colorAccent">@color/colorAccent</item>
         <!--<item name="android:windowBackground">@android:color/transparent</item>-->
     </style>
+    <declare-styleable name="CircleImageView">
+        <attr name="bordeAngle" format="dimension"></attr>
+        <attr name="type">
+            <enum name="circle" value="0"></enum>
+            <enum name="round" value="1"></enum>
+        </attr>
+    </declare-styleable>
 
 </resources>
