增加工具类，增加悬浮窗，增加app使用时间统计

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
 
     <color name="bottom_select">#333333</color>
     <color name="bottom_normal">#BBBBBB</color>
+
+    <color name="progress_0">#FF5DDD45</color>
+    <color name="progress_1">#FF0091FF</color>
+    <color name="progress_2">#FFFFD944</color>
+    <color name="progress_3">#FFFF443A</color>
 </resources>
