--- a/app/src/main/res/layout/activity_sub0.xml
+++ b/app/src/main/res/layout/activity_sub0.xml
@@ -4,6 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#ce686666"
     tools:context="com.chaozhuo.parentmanager.activity.Sub0Activity">
 
+    <com.chaozhuo.parentmanager.weight.CustomSeekBarV
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"></com.chaozhuo.parentmanager.weight.CustomSeekBarV>
 </android.support.constraint.ConstraintLayout>
