--- a/app/src/main/res/layout/fragment_manager.xml
+++ b/app/src/main/res/layout/fragment_manager.xml
@@ -20,4 +20,10 @@
         android:src="@drawable/mali"
         android:text="manger" />
 
+    <com.chaozhuo.parentmanager.weight.CustomSeekBarV
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"></com.chaozhuo.parentmanager.weight.CustomSeekBarV>
+
 </LinearLayout>
