--- a/app/src/main/res/layout/item_apply_history.xml
+++ b/app/src/main/res/layout/item_apply_history.xml
@@ -5,6 +5,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginTop="12dp"
+    android:background="@drawable/shape_rect_grad"
     android:padding="8dp">
 
     <ImageView
@@ -22,6 +24,9 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
         android:text="我是内容随便写"
+        android:textSize="14dp"
+        android:textStyle="bold"
+        android:textColor="@color/tvWhite"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toRightOf="@+id/manager_history_icon"
         app:layout_constraintTop_toTopOf="parent" />
