--- a/app/src/main/res/layout/fragment_manager.xml
+++ b/app/src/main/res/layout/fragment_manager.xml
@@ -1,34 +1,52 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/holo_purple"
-    android:orientation="vertical"
-    tools:context="com.chaozhuo.parentmanager.fragment.StatisticsFragment">
+    android:background="@android:color/holo_purple">
 
-    <!-- TODO: Update blank fragment layout -->
-    <com.chaozhuo.parentmanager.weight.CircleImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/mali"
-        android:text="manger"
-        app:type="round" />
-
-    <com.chaozhuo.parentmanager.weight.CircleImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/mali"
-        android:text="manger" />
-
-    <com.chaozhuo.parentmanager.weight.CustomSeekBarV
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"></com.chaozhuo.parentmanager.weight.CustomSeekBarV>
-
-    <com.chaozhuo.parentmanager.weight.TimeLineView
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent"
 
-</LinearLayout>
+        android:orientation="vertical"
+        tools:context="com.chaozhuo.parentmanager.fragment.StatisticsFragment">
+
+
+        <!-- TODO: Update blank fragment layout -->
+        <com.chaozhuo.parentmanager.weight.CircleImageView
+            android:id="@+id/circle_round"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/mali"
+            android:text="manger"
+            app:type="round" />
+
+        <com.chaozhuo.parentmanager.weight.CircleImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@+id/circle_round"
+            android:src="@drawable/mali"
+            android:text="manger" />
+
+        <com.chaozhuo.parentmanager.weight.CustomSeekBarV
+            android:layout_width="wrap_content"
+            android:layout_height="144dp"
+            android:layout_alignParentRight="true"
+            android:layout_margin="8dp" />
+
+        <com.chaozhuo.parentmanager.weight.TimeLineView
+            android:id="@+id/time_line"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/circle_round"
+            android:layout_marginRight="56dp" />
+
+        <FrameLayout
+            android:layout_width="200dp"
+            android:layout_height="100dp"
+            android:layout_below="@+id/time_line">
+
+        </FrameLayout>
+    </RelativeLayout>
+</ScrollView>
