--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,6 +8,7 @@
         <item name="colorAccent">@color/colorAccent</item>
         <!--<item name="android:windowBackground">@android:color/transparent</item>-->
     </style>
+
     <declare-styleable name="CircleImageView">
         <attr name="bordeAngle" format="dimension"></attr>
         <attr name="type">
@@ -15,5 +16,14 @@
             <enum name="round" value="1"></enum>
         </attr>
     </declare-styleable>
+
+    <style name="AppTheme.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
 </resources>
