--- a/app/src/main/res/layout/fragment_touch_event.xml
+++ b/app/src/main/res/layout/fragment_touch_event.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent">
 
     <com.chaozhuo.parentmanager.weight.touch.FrameLayoutA
+        android:id="@+id/frame_a_1"
         android:layout_width="match_parent"
         android:layout_height="300dp"
         android:background="@color/bottom_normal"
@@ -12,9 +13,11 @@
         tools:context="com.chaozhuo.parentmanager.fragment.StatisticsFragment">
 
         <com.chaozhuo.parentmanager.weight.touch.FrameLayoutB
+            android:id="@+id/frame_b_2"
             android:layout_width="200dp"
             android:layout_height="200dp"
             android:background="@color/design_default_color_primary">
+
 
             <com.chaozhuo.parentmanager.weight.touch.ViewC
                 android:id="@+id/view_c"
