--- a/app/src/main/res/layout/item_apply_history.xml
+++ b/app/src/main/res/layout/item_apply_history.xml
@@ -4,8 +4,8 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="12dp"
+    android:layout_height="40dp"
+    android:layout_margin="8dp"
     android:background="@drawable/shape_rect_grad"
     android:padding="8dp">
 
@@ -13,7 +13,6 @@
         android:id="@+id/manager_history_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_home_black_24dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -24,20 +23,10 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
         android:text="我是内容随便写"
+        android:textColor="@color/tvWhite"
         android:textSize="14dp"
         android:textStyle="bold"
-        android:textColor="@color/tvWhite"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toRightOf="@+id/manager_history_icon"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/manager_tv_apply_time"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="12:00"
-        app:layout_constraintBottom_toBottomOf="@+id/manager_history_agree"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/manager_history_agree" />
-
 </android.support.constraint.ConstraintLayout>
