--- a/app/src/main/res/drawable/hall_oval_black.xml
+++ b/app/src/main/res/drawable/hall_oval_black.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <stroke android:color="#e6004a" android:width="1dp"/>
+    <stroke
+        android:width="1dp"
+        android:color="#15915b" />
+    <solid android:color="#34bd81" />
     <corners android:radius="60dp" />
-    <size android:height="100dp" android:width="100dp"/>
 </shape>
