--- a/app/src/main/res/layout/view_broadcast_info.xml
+++ b/app/src/main/res/layout/view_broadcast_info.xml
@@ -1,28 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.chaozhuo.parentmanager.test.kotlin.KotlinmActivity">
+    android:layout_height="wrap_content">
 
-    <View
-        android:id="@+id/view"
+
+    <ImageView
+        android:id="@+id/icon"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="#28a26d"
+        android:src="@drawable/hall_oval_black"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintWidth_percent="0.7" />
 
-    <com.chaozhuo.parentmanager.weight.ChatHallInfoView
-        android:id="@+id/hall"
-        android:layout_width="wrap_content"
+    <TextView
+        android:id="@+id/name"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:gravity="center"
+        android:singleLine="true"
+        android:text="holdon real"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
+        app:layout_constraintTop_toBottomOf="@+id/icon" />
 </android.support.constraint.ConstraintLayout>
