--- a/app/src/main/res/layout/fragment_touch_event.xml
+++ b/app/src/main/res/layout/fragment_touch_event.xml
@@ -1,8 +1,9 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <com.chaozhuo.parentmanager.weight.touch.FrameLayoutA
         android:id="@+id/frame_a_1"
@@ -28,5 +29,14 @@
         </com.chaozhuo.parentmanager.weight.touch.FrameLayoutB>
 
     </com.chaozhuo.parentmanager.weight.touch.FrameLayoutA>
-</FrameLayout>
+
+   <ScrollView
+       android:layout_width="match_parent"
+       android:layout_height="match_parent">
+       <android.support.v7.widget.RecyclerView
+           android:id="@+id/rv"
+           android:layout_width="match_parent"
+           android:layout_height="match_parent" />
+   </ScrollView>
+</LinearLayout>
 
