--- a/app/src/main/res/layout/activity_kotlinm.xml
+++ b/app/src/main/res/layout/activity_kotlinm.xml
@@ -16,7 +16,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <com.chaozhuo.parentmanager.weight.ChatHallInfoView
+    <com.chaozhuo.parentmanager.weight.DotAnimView
         android:id="@+id/hall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
