--- a/app/src/main/res/layout/fragment_rv.xml
+++ b/app/src/main/res/layout/fragment_rv.xml
@@ -11,6 +11,7 @@
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/notify"
+        android:layout_margin="24dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="left|bottom"
