--- a/app/src/main/res/menu/single_select.xml
+++ b/app/src/main/res/menu/single_select.xml
@@ -3,11 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/wan"
-            android:title="1" />
+            android:id="@+id/main"
+            android:title="mainActivity" />
         <item
-            android:id="@+id/wu"
-            android:title="2" />
+            android:id="@+id/scroll"
+            android:title="scrollActivity" />
         <item
             android:id="@+id/sheng"
             android:title="3" />
